fix users columns wrapping and some images not having the right aspect ratio

--- a/resources/sass/_users.scss
+++ b/resources/sass/_users.scss
@@ -14,17 +14,24 @@
   @include media-breakpoint-up(lg) {
     columns: 3;
   }
+
+  &__user {
+    display: inline-block;
+  }
 }
 
 .user__image-wrap {
   width: 100%;
 	height: 0;
   position: relative;
+  overflow: hidden;
 
 	img {
 		vertical-align: middle;
 		width: 100%;
 		height: auto;
     position: absolute;
+    max-height: 100%;
+    object-fit: contain;
   }
 }
